kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wholesale
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
